# cropphenology

./: License.txt  README.md  environment.yml  pyproject.toml
data/csv/: goodwaterbau_2023.csv  phenocam_gcc_evi_merged.csv  phenological_dates.csv  phenological_stages.csv  synthetic_evi.csv  train_test_dataset.csv
data/shapefile/: fields.dbf  fields.sbn  fields.sbx  fields.shp  fields.shp.xml  fields.shx  fields_class.dbf  fields_class.shp  fov_phenocam.dbf  fov_phenocam.shp  fov_phenocam.shx  phenocam_fov.dbf  phenocam_fov.shp  phenocam_fov.shx  phenocams.dbf  phenocams.qmd  phenocams.shp  phenocams.shx
data_processed/goodwaterbau/2023/fields_predicted/: predicted_fields.dbf
data_processed/goodwaterbau/2023/models/: ElasticNet_Emergence_model.pkl  ElasticNet_Sowing_model.pkl  MLR_Emergence_model.pkl  MLR_Sowing_model.pkl  SVM_Emergence_model.pkl  SVM_Sowing_model.pkl
data_processed/goodwaterbau/2023/predicted_img/: 20230402_evi.tif  20230404_evi.tif  20230405_evi.tif  20230406_evi.tif  20230406_evi.tif.aux.xml  20230407_evi.tif  20230409_evi.tif  20230410_evi.tif  20230411_evi.tif  20230412_evi.tif  20230413_evi.tif  20230414_evi.tif  (+192 more)
notebooks/: cropphenology.ipynb  cropphenology1.ipynb
src/cropphenology/: utils.py
src/cropphenology/imgpredictor/: imgvalidator.py  sgfilter.py
src/cropphenology/imgprocessor/: clouddecoder.py  cloudmasker.py  evicalculator.py  imgorganizer.py
src/cropphenology/phenologyextractor/: dataextractor.py  fieldpredictor.py  ggcnormalizer.py  modelpredictor.py  phenologyextractor.py  phenologystages.py  plotphenology.py
(+1148 files in other folders)
