[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cropphenology"
version = "0.0.1"
readme = "README.md"
description = "Repository to process HLS images and retrieve phenological metrics."
keywords = ["GIS", "remote sensing"]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "geopandas",  
    "matplotlib",
    "rasterio",
    "pyproj",
    "scikit-learn",
    "joblib",
    "lightgbm",
    "matplotlib",
     "scipy",
    "geogapfiller@git+https://github.com/uvaires/geogapfiller",



]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["cropphenology*"]  # package names should match these glob patterns (["*"] by default)
#exclude = []  # exclude packages matching these glob patterns (empty by default)

# Optional. Used to configure black (autoformatter)
[tool.black]
line-length = 100

# Optional. Used to configure isort (import sorter)
[tool.isort]
profile = "black"
line_length = 100
